Projet compilé en version Community par défaut.